# server/swagger/openapi.json
@@ -1858,6 +1858,26 @@
         }
       }
     },
+    "/v1/workspace/chat-auto": {
+      "post": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/v1/workspaces": {
       "get": {
         "tags": [
